--- a/display-exercise.html
+++ b/display-exercise.html
@@ -10,12 +10,16 @@
   <!-- reset -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <!-- your styles will go in display-page.css -->
+    <!-- your styles will go in display-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
+  <div class="bigbox">
+  </div>
+  <div class="topbox">
+  </div>
+  <div class="bottombox">
+  </div>
 <!-- your HTML here to implement the colored box design -->
 	<p>Placeholder!</p>
 </body>
